--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
 
 body {
-	background: teal
+	background-image: url(icons/bluegreenpixels.jpg);
+	background-color: lightskyblue;
+ 	
 }
-
 #wrapper {
 	display: grid;
 	justify-content: center;
@@ -11,19 +12,23 @@ body {
 	margin: 0;
 }
 
-header {
+/*header {
 	display: grid;
-	margin-left: 15%;
-	font-size: 80px;
+	margin-left: 20%;
+	font-family: Arial, Helvetica, sans-serif;
+	border: 6px solid black;
+	background: rebeccapurple;
+	font-size: 90px;
+	font-weight: 600;
 	text-align: center;
 	
-}
+}*/
 
 #tools {
 	display: grid;
 	grid-row: 2;
 	background: lightslategrey;
-	margin-left: 5%;
+	margin-left: 60%;
 	grid-column: 2;
 	height: 400px;
 	width: 100px;
@@ -35,7 +40,7 @@ header {
 	display: grid;
 	grid-column: 1;
 	grid-row: 2;
-	
+	margin-left: 10%;
 	width: 520px;
 	height: 568px;
 	border: 6px solid black;
@@ -57,10 +62,14 @@ header {
 button {
 	background: lightslategrey;
 	font-size: 1rem;
-	border: 1px solid black;
+	
 }
 
 button:hover {
 	cursor: pointer;
 	
+}
+
+input:hover {
+	cursor: pointer;
 }
